--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-gspread==3.1.0
-PyOpenSSL==19.0.0
-oauth2client==4.1.3
-pandas==0.24.2
-google-api-python-client
+gspread~=3.1.0
+PyOpenSSL~=19.0.0
+oauth2client~=4.1.3
+pandas~=0.24.2
+google-api-python-client~=1.7.10
